--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "debug": "^4.1.1",
     "lodash": "^4.17.11",
     "mongoose": "5.3.1",
-    "mongoose-schema-extend": "^0.2.2",
-    "mongoose-times": "^0.1.0",
+    "mongoose-schema-extend": "git+https://github.com/kennylmay/mongoose-schema-extend.git#0f3c73eb5d4cd6b8469c8060f8b23a984751cf09",
+    "mongoose-times": "0.1.0",
     "ms": "^2.1.1",
     "winston": "1.0.2"
   },
   "name": "@tabit/mongoose",
   "description": "wrapper for mongoose, including various non-business plugins",
-  "version": "1.0.0",
+  "version": "0.1.1",
   "main": "src/index.js",
   "devDependencies": {
     "chai": "^4.2.0",
