--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   },
   "name": "@tabit/mongoose",
   "description": "wrapper for mongoose, including various non-business plugins",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "src/index.js",
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^6.1.1"
+    "mocha": "^6.1.1",
+    "moment": "^2.24.0"
   },
   "scripts": {
     "test": "mocha"
