--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "@tabit/utils": "../utils",
+    "@tabit/utils": "^1.1.0",
     "bluebird": "3.5.0",
     "chalk": "^2.4.2",
     "debug": "^4.1.1",
